kubernetes-manifests/infra/zitadel/rendered/deployment_login.yaml
---
# Source: zitadel/templates/deployment_login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zitadel-login
  namespace: infra
  labels:
    helm.sh/chart: zitadel-10.0.2
    app.kubernetes.io/name: zitadel-login
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.14.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: login
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zitadel-login
      app.kubernetes.io/instance: zitadel
      app.kubernetes.io/component: login
  template:
    metadata:
      annotations:
        checksum/configmap: 635d1cac755e88eedf2be6ed6918be7bdd9efd5cc0b5dcc9dcbb9ff3f30df799
        checksum/secret-login-service-key: 33b1ddfea2f8263eace59f9330bec1f2120fe81ad30565c12623fa495d09673e
      labels:
        helm.sh/chart: zitadel-10.0.2
        app.kubernetes.io/name: zitadel-login
        app.kubernetes.io/instance: zitadel
        app.kubernetes.io/version: "v4.14.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: login
    spec:
      serviceAccountName: zitadel-login
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      enableServiceLinks: false
      containers:
        - name: zitadel-login
          securityContext:
              privileged: false
              readOnlyRootFilesystem: true
              runAsNonRoot: true
              runAsUser: 1000
          image: "ghcr.io/zitadel/zitadel-login:v4.14.0"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
            name: http-server
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /ui/v2/login/healthy
              port: http-server
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ui/v2/login/ready
              port: http-server
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
          - name: login-config-dotenv
            mountPath: /.env-file/
            readOnly: true
          - name: login-service-key
            mountPath: /login-service-key
            readOnly: true
          resources:
              {}
      volumes:
      - name: login-config-dotenv
        configMap:
          name: zitadel-login-config-dotenv
      - name: login-service-key
        secret:
          secretName: zitadel-login-service-key
          defaultMode: 0440
          items:
            - key: tls.key
              path: tls.key
