kubernetes-manifests/infra/zitadel/rendered/service_login.yaml
---
# Source: zitadel/templates/service_login.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-login
  namespace: infra
  annotations:
  labels:
    helm.sh/chart: zitadel-10.0.2
    app.kubernetes.io/name: zitadel-login
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.14.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: login
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http-server
      appProtocol: kubernetes.io/http
  selector:
    app.kubernetes.io/name: zitadel-login
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/component: login
